[project]
name = "stochICE"
version = "0.0.1"
authors = [
  { name="Jason Duguay", email="jason.duguay@usherbrooke.ca" }, { name="Mathieu Fouquet"}
]
description = "Tool to assist in stochastic ice jam modelling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
